--- a/css/main.css
+++ b/css/main.css
@@ -11,18 +11,29 @@ body{
 .caja{
 	width: 200px;
 	height: 200px;
+	position: absolute;
 }
 
 #rosa{
 	background-color: pink;
+	left: 0;
+	top: 0;
 }
 
 #azul{
 	background-color: blue;
-	left:200px;
-	position: relative;
+	right: 0;
+	top: 0;
 }
 
 #verde{
 	background-color: green;
+	bottom: 0;
+	left: 0;
+}
+
+#amarillo{
+	background-color: yellow;
+	bottom: 0;
+	right: 0;
 }
