--- a/css/main.css
+++ b/css/main.css
@@ -11,29 +11,22 @@ body{
 .caja{
 	width: 200px;
 	height: 200px;
-	position: absolute;
 }
 
 #rosa{
 	background-color: pink;
-	left: 0;
-	top: 0;
 }
 
 #azul{
 	background-color: blue;
-	right: 0;
-	top: 0;
+	position: absolute;
+	left:200px;
 }
 
 #verde{
 	background-color: green;
-	bottom: 0;
-	left: 0;
 }
 
 #amarillo{
 	background-color: yellow;
-	bottom: 0;
-	right: 0;
 }
